BFJ-93 Remove compiler warnings due to Java 9